kubernetes/networkpolicy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: pawfolio-policy
  namespace: pawfolio

spec:
  podSelector:
    matchLabels:
      app: pawfolio

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pawfolio
      ports:
        - protocol: TCP
          port: 5000

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432

    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # HTTPS/API access
    - ports:
        - protocol: TCP
          port: 443


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-policy
  namespace: pawfolio

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pawfolio
      ports:
        - protocol: TCP
          port: 5432

  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
